# native-oauth2-loopback-cpp

./: CMakeLists.txt  LICENSE  OAuth2CodeListener.cpp  OAuth2CodeListener.h  OAuth2Session.cpp  OAuth2Session.h  README.md  vcpkg.json
examples/: dropbox_example.cpp
include/oauth2loopback/: authorization_flow.h  code_listener.h  provider_traits.h
src/: authorization_flow.cpp  code_listener.cpp
